--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta
+      name="description"
+      content="We're a casual and vintage clothing brand. We want to bring style back."
+    />
+    <meta property="og:title" content="Urban's Clothing" />
+    <meta
+      property="og:description"
+      content="We're a casual and vintage clothing brand. We want to bring style back."
+    />
+    <meta
+      property="og:image"
+      content="https://geuzjkdzkblmryfdmtpi.supabase.co/storage/v1/object/public/products-img/light-logo.png"
+    />
+    <link rel="icon" href="/favicon-icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +23,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Store App</title>
+    <title>Urban's Clothing</title>
   </head>
   <body>
     <div id="root"></div>
